Refactoring because of switch to Intellij-IDEA.